-*- coding: utf-8; fill-column: 68 -*-

=======
CHANGES
=======
0.6.9
=====
- orm
  - Fixed subtle bug that caused SQL to blow
    up if: column_property() against subquery +
    joinedload + LIMIT + order by the column
    property() occurred.  [ticket:2188].

  - The join condition produced by with_parent
    as well as when using a "dynamic" relationship
    against a parent will generate unique
    bindparams, rather than incorrectly repeating 
    the same bindparam.  [ticket:2207].

  - Repaired the "no statement condition" 
    assertion in Query which would attempt
    to raise if a generative method were called
    after from_statement() were called.
    [ticket:2199].

- sql
  - Fixed two subtle bugs involving column 
    correspondence in a selectable,
    one with the same labeled subquery repeated, the other
    when the label has been "grouped" and 
    loses itself.  Affects [ticket:2188].

- oracle
  - Added ORA-00028 to disconnect codes, use 
    cx_oracle _Error.code to get at the code,
    [ticket:2200].

0.6.8
=====
- orm
  - Calling query.get() against a column-based entity is
    invalid, this condition now raises a deprecation warning.
    [ticket:2144]

  - a non_primary mapper will inherit the _identity_class
    of the primary mapper.  This so that a non_primary
    established against a class that's normally in an
    inheritance mapping will produce results that are 
    identity-map compatible with that of the primary
    mapper [ticket:2151]

  - Backported 0.7's identity map implementation, which
    does not use a mutex around removal.  This as some users 
    were still getting deadlocks despite the adjustments
    in 0.6.7; the 0.7 approach that doesn't use a mutex
    does not appear to produce "dictionary changed size"
    issues, the original rationale for the mutex.  
    [ticket:2148]

  - Fixed the error message emitted for "can't
    execute syncrule for destination column 'q';
    mapper 'X' does not map this column" to 