@@ -1254,9 +1254,16 @@ column_dict = dict
 ordered_column_set = OrderedSet
 populate_column_dict = PopulateDict
 
-def unique_list(seq, compare_with=set):
-    seen = compare_with()
-    return [x for x in seq if x not in seen and not seen.add(x)]
+def unique_list(seq, hashfunc=None):
+    seen = {}
+    if not hashfunc:
+        return [x for x in seq 
+                if x not in seen 
+                and not seen.__setitem__(x, True)]
+    else:
+        return [x for x in seq 
+                if hashfunc(x) not in seen 
+                and not seen.__setitem__(hashfunc(x), True)]
 
 class UniqueAppender(object):
     """Appends items to a collection ensuring uniqueness.
